Fix spacing in thumbnail picker

--- a/wonder/romeo/static/assets/css/app.css
+++ b/wonder/romeo/static/assets/css/app.css
@@ -5044,17 +5044,24 @@ label,
 
 /* line 150, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__close-link {
-  margin: 12px 12px 0 0;
+  width: 24px;
+  height: 24px;
+  margin: 12px;
+  padding: 2px;
   float: right;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1;
+  border-radius: 100%;
 }
 
-/* line 155, ../../scss/specifics/video/_video-thumbnail.scss */
+/* line 162, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__close-link:hover {
   cursor: pointer;
   border-color: #70797b;
 }
 
-/* line 160, ../../scss/specifics/video/_video-thumbnail.scss */
+/* line 167, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__available-images {
   /* transition is buggy after resizing container to hold images */
   -webkit-transform: translate3d(0, 0, 0);
@@ -5064,8 +5071,9 @@ label,
   margin-left: 253px;
 }
 
-/* line 170, ../../scss/specifics/video/_video-thumbnail.scss */
+/* line 177, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__images-container {
+  margin-bottom: 24px;
   width: 960px;
   overflow: hidden;
   display: block;
@@ -5075,14 +5083,14 @@ label,
   background: rgba(0, 0, 0, 0.4);
 }
 
-/* line 180, ../../scss/specifics/video/_video-thumbnail.scss */
+/* line 188, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__available-image-container {
   display: inline-block;
   margin-right: 10px;
   background: black;
 }
 
-/* line 190, ../../scss/specifics/video/_video-thumbnail.scss */
+/* line 198, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__available-image {
   height: 250px;
   opacity: 0.4;
@@ -5090,7 +5098,7 @@ label,
   cursor: pointer;
 }
 
-/* line 197, ../../scss/specifics/video/_video-thumbnail.scss */
+/* line 205, ../../scss/specifics/video/_video-thumbnail.scss */
 .video-preview__available-image--active {
   opacity: 1;
 }
